[package]
name = "image-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["cargo"] }
image = "0.24.8"
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
strum_macros = "0.25.3"
